changed suppl plot, except exp5

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -223,7 +223,7 @@ If moral character information is prioritized, the next question is how? Previou
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
 
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy was lower than 60\% were excluded from analyses. Also, accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files.
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy was lower than 60\% were excluded from analyses. Also, accurate responses with less than 200ms reaction times were excluded from the analysis. Because there were a few participants participated multiple experiments, we only included their data from first participation in the three-level hierarchical model (see Methods for details). All excluded data can be found in the shared raw data files.
 
 All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 at Tsinghua University, Beijing, China. Participants in these experiments were recruited from the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants from Wenzhou University, Wenzhou, China, in 2017 for experiments 1a, 1b, 4a, and 4b. Experiment 3b was finished at Wenzhou University in 2017 (See Table 1 for an overview of these experiments).
 
@@ -281,7 +281,7 @@ Exp\_6b & 2016-01 & Beijing & 23 (22) & 90 & explicit & words & Sequentially\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} Stim of Morality = How moral character was manipulated; Presenting order = how shapes \& labels were presented. The data from experiments 7a \& 7b, which were reported in Hu et al (2020), are not analyzed here.}
+\normalsize{\textit{Note.} Stim.for.Morality = How moral character was manipulated; Presenting.order = How shapes \& labels were presented. Number in () for N is number of participants are included in the analysis. In the current analysis, we only remain participants' data when they participate the experiment for the first time.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -296,7 +296,7 @@ We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to 
 
 We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore providing uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using the normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide a better fitting of the data. For example, Reaction times are not normally distributed but are right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2020). Third, BHM provides a unified framework to analyze data from different levels and different sources, avoiding information loss when we need to combine data from different experiments.
 
-We used the \texttt{r} package \texttt{BRMs} (Bürkner, 2017), which used Stan (Carpenter et al., 2017) as the back-end, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis (e.g., Goh, Hall, \& Rosenthal, 2016). More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Results of individual experiments can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately.
+We used the \texttt{r} package \texttt{BRMs} (Bürkner, 2017), which used Stan (Carpenter et al., 2017) as the back-end, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis (e.g., Goh, Hall, \& Rosenthal, 2016). More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Method and data of individual experiments can be found in the supplementary materials and open datasets. Because a few participants had participated multiple experiments, we only included their data of first paticipation to avoid practice effect. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately.
 
 For questionnaire data, we only reported the subjective distance between different persons or moral characters in the supplementary results and did not analyze other questionnaire data, which are described in (Liu et al., 2020).
 
@@ -389,7 +389,7 @@ For data from experiments 4a and 4b, we further examined whether the self-refere
 
 To test whether moral characters are prioritized, we modeled data from experiments 1a, 1b, 1c, 2, 5, and 6a with three-level Bayesian hierarchical models. All these experiments shared similar designs and can be used for testing the prioritization effect of moral character. The valid and unique sample size is 192. Note that for both experiments 1a and 1b, two datasets were collected at different time points and locations, thus we treated them as independent samples. Here we only reported the population-level results of three-level Bayesian models, the detailed results of each experiment can be found in supplementary materials.
 
-For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters (``good person'', ``kind person'' or a name associated with good behaviors) have higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral characters (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), the difference (\(median_{diff}\) = 0.31, 95\% HDI {[}0, 0.62{]}) has a 97.31\% probability of being positive (\textgreater{} 0), 94.91\% of being significant (\textgreater{} 0.05). But we did not find a difference between shapes associated with bad characters (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, the difference (\(median_{diff}\) = 0.05, 95\% HDI {[}-0.27, 0.38{]}) only has a 60.56\% probability of being positive (\textgreater{} 0), 49.34\% of being significant (\textgreater{} 0.05).
+For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters (``good person'', ``kind person'' or a name associated with good behaviors) have higher sensitivity (median = 2.45, 95\% HDI = {[}2.24 2.72{]}) than shapes associated with neutral characters (median = 2.15, 95\% HDI = {[}1.92 2.45{]}), the difference (\(median_{diff}\) = 0.31, 95\% HDI {[}0, 0.62{]}) has a 97.31\% probability of being positive (\textgreater{} 0), 94.91\% of being significant (\textgreater{} 0.05). But we did not find a difference between shapes associated with bad characters (median = 2.21, 95\% HDI = {[}2.00 2.48{]}) and neutral character, the difference (\(median_{diff}\) = 0.05, 95\% HDI {[}-0.27, 0.38{]}) only has a 60.56\% probability of being positive (\textgreater{} 0), 49.34\% of being significant (\textgreater{} 0.05).
 
 \begin{figure}
 \centering
@@ -397,9 +397,9 @@ For the \emph{d} prime, results from the Bayesian model revealed a robust effect
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral character on perceptual matching}
 \end{figure}
 
-The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good characters were faster (median = 579 ms, 95\% HDI = {[}500 661{]}) than shapes associated with neutral characters (median = 624 ms, 95\% HDI = {[}543 711{]}), the effect (\(median_{diff}\) = -44, 95\% HDI {[}-67, -24{]}) has a 99.94\% probability of being negative (\textless{} 0), 99.94\% of being significant (\textless{} -0.05). We also found that RTs to shapes associated with bad characters (median = 641 ms, 95\% HDI = {[}561 730{]}) were slower as compared to the neutral character, the effect (\(median_{diff}\) = 17, 95\% HDI {[}-6, 36{]}) has a 93.58\% probability of being positive (\textgreater{} 0), 93.55\% of being significant (\textgreater{} 0.05).
+The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good characters were faster (median = 583 ms, 95\% HDI = {[}506 663{]}) than shapes associated with neutral characters (median = 626 ms, 95\% HDI = {[}547 710{]}), the effect (\(median_{diff}\) = -44, 95\% HDI {[}-67, -24{]}) has a 99.94\% probability of being negative (\textless{} 0), 99.94\% of being significant (\textless{} -0.05). We also found that RTs to shapes associated with bad characters (median = 643 ms, 95\% HDI = {[}564 729{]}) were slower as compared to the neutral character, the effect (\(median_{diff}\) = 17, 95\% HDI {[}-6, 36{]}) has a 93.58\% probability of being positive (\textgreater{} 0), 93.55\% of being significant (\textgreater{} 0.05).
 
-For the nonmatch trials, we found a similar pattern but a much smaller effect size. Shapes associated with good characters (median = 654 ms, 95\% HDI = {[}573 743{]}) were faster than shapes associated with neutral characters (median = 672 ms, 95\% HDI = {[}588 763{]}), the difference (\(median_{diff}\) = -18, 95\% HDI {[}-27, -8{]}) has a 99.91\% probability of being negative (\textless{} 0), 99.91\% of being significant (\textless{} -0.05). In contrast, the shapes associated with bad characters (median = 677 ms, 95\% HDI = {[}590 766{]}) were slower than shapes associated with neutral characters, the effect (\(median_{diff}\) = 5, 95\% HDI {[}-3, 13{]}) has a 92.43\% probability of being positive (\textgreater{} 0), 92.31\% of being significant (\textgreater{} 0.05).
+For the nonmatch trials, we found a similar pattern but a much smaller effect size. Shapes associated with good characters (median = 657 ms, 95\% HDI = {[}571 739{]}) were faster than shapes associated with neutral characters (median = 673 ms, 95\% HDI = {[}589 761{]}), the difference (\(median_{diff}\) = -18, 95\% HDI {[}-27, -8{]}) has a 99.91\% probability of being negative (\textless{} 0), 99.91\% of being significant (\textless{} -0.05). In contrast, the shapes associated with bad characters (median = 678 ms, 95\% HDI = {[}592 764{]}) were slower than shapes associated with neutral characters, the effect (\(median_{diff}\) = 5, 95\% HDI {[}-3, 13{]}) has a 92.43\% probability of being positive (\textgreater{} 0), 92.31\% of being significant (\textgreater{} 0.05).
 
 \hypertarget{modulation-effect-self-referential-processing}{%
 \subsection{Modulation effect self-referential processing}\label{modulation-effect-self-referential-processing}}
@@ -425,9 +425,9 @@ Experiments 4a and 4b were designed to test whether the good character and self-
 
 In experiment 4a, where ``self'' vs.~``other'' were task-relevant and moral character were task-irrelevant, we found the ``self'' conditions performed better than the ``other'' conditions for both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui et al. (2012)).
 
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}), the difference (median = 0.08, 95\% HDI {[}-0.10, 0.27{]}) has an 81.60\% probability of being positive (\textgreater{} 0), 64.33\% of being significant (\textgreater{} 0.05). For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}), the difference (median = -0.09, 95\% HDI {[}-0.25, 0.05{]}) has an 89.03\% probability of being negative (\textless{} 0), 71.38\% of being significant (\textless{} -0.05). The difference between these two effects (median = 0.18, 95\% HDI {[}-0.06, 0.43{]}) has a 92.88\% probability of being positive (\textgreater{} 0), 85.08\% being significant (\textgreater{} 0.05). See Figure \ref{fig:plot-exp4-all}.
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.82, 95\% HDI {[}2.64 3.03{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.94{]}), the difference (median = 0.08, 95\% HDI {[}-0.10, 0.27{]}) has an 81.60\% probability of being positive (\textgreater{} 0), 64.33\% of being significant (\textgreater{} 0.05). For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.70 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.79 2.14{]}), the difference (median = -0.09, 95\% HDI {[}-0.25, 0.05{]}) has an 89.03\% probability of being negative (\textless{} 0), 71.38\% of being significant (\textless{} -0.05). The difference between these two effects (median = 0.18, 95\% HDI {[}-0.06, 0.43{]}) has a 92.88\% probability of being positive (\textgreater{} 0), 85.08\% being significant (\textgreater{} 0.05). See Figure \ref{fig:plot-exp4-all}.
 
-A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) was inside, the effect (median = -8, 95\% HDI {[}-17, 2{]}) has a 94.55\% probability of being negative (\textless{} 0) and 94.50\% of being significant (\textless{} -0.05). In contrast, RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 755{]}) were slower than those with neutral character (median = 722, 95\% HDI {[}702 741{]}) inside, the effect (median = 12, 95\% HDI {[}-4, 28{]}) has a 93.00\% probability of being positive (\textgreater{} 0) and 92.83\% of being significant (\textgreater{} 0.05). The difference between the effects (median = -19, 95\% HDI {[}-43, 4{]}) has a 94.90\% probability of being negative (\textless{} 0) and 94.88\% of being significant (\textless{} -0.05).
+A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 633, 95\% HDI {[}614 654{]}) were faster than when a neutral character (median = 647, 95\% HDI {[}628 666{]}) was inside, the effect (median = -8, 95\% HDI {[}-17, 2{]}) has a 94.55\% probability of being negative (\textless{} 0) and 94.50\% of being significant (\textless{} -0.05). In contrast, RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}707 756{]}) were slower than those with neutral character (median = 713, 95\% HDI {[}691 734{]}) inside, the effect (median = 12, 95\% HDI {[}-4, 28{]}) has a 93.00\% probability of being positive (\textgreater{} 0) and 92.83\% of being significant (\textgreater{} 0.05). The difference between the effects (median = -19, 95\% HDI {[}-43, 4{]}) has a 94.90\% probability of being negative (\textless{} 0) and 94.88\% of being significant (\textless{} -0.05).
 
 In experiment 4b, where moral characters were task-relevant and ``self'' vs ``other'' were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both \emph{d'} and reaction times. This pattern, again, shows a robust prioritization effect of good character.
 
