--- a/Suppl_Materials_individual_Exp_simple.tex
+++ b/Suppl_Materials_individual_Exp_simple.tex
@@ -439,7 +439,7 @@ However, in this the task, participants only learn the association between two g
 \hypertarget{stimuli-1}{%
 \subsubsection{Stimuli}\label{stimuli-1}}
 
-2 shapes were included (circle, square) and each appeared above a central fixation cross with the personal label appearing below. However, the shapes were not empty but with a two-Chinese-character word in the middle, the word was one of three labels with different moral valence: ``good person'', ``bad person'' and ``neutral person''. Before the experiment, participants learned the self/other association, and were informed to only response to the association between shapes' configure and the labels below the fixation, but ignore the words within shapes. Besides the behavioral experiments, participants from Tsinghua community also finished questionnaires as Experiments 3, and participants from Wenzhou community finished a series of questionnaire as the other experiment finished in Wenzhou.
+2 shapes were included (circle, square) and each appeared above a central fixation cross with the personal label appearing below. However, the shapes were not empty but with a two-Chinese-character word in the middle, the word was one of three labels with different moral valence: ``good person'', ``bad person'' and ``neutral person''. Before the experiment, participants learned the self/other association, and were informed to only response to the association between shapes' configure and the labels below the fixation, but ignore the words within shapes. Besides the behavioral experiments, participants from Tsinghua community also finished questionnaires as Experiments 3, and participants from Wenzhou community finished a series of questionnaire as the other experiment finished in Wenzhou, Zhejiang Province, China.
 
 \hypertarget{procedure-6}{%
 \subsubsection{Procedure}\label{procedure-6}}
