--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Moral character is central to social evaluation and moral judgment. People can infer moral character from a human face in less than one second. However, whether moral character-related information is prioritized, as compared to neutral characters, in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192), we found a robust prioritization effect of good character-related shapes, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction between valence and self-referential processing. Results of three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when referred to the self but weak or non-exist when referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and the self occurred even when one of them was task-irrelevant. Together, these results not only provide evidence for a robust prioritization effect of good character but also the crucial role of spontaneous self-referential process in the prioritization of good character.
+ Moral character is central to social evaluation and moral judgment. People can form an impression of others' moral character in less than one second. However, whether moral character-related information is prioritized, as compared to neutral characters, in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192), we found a robust prioritization effect of good character-related shapes, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction between valence and self-referential processing. Results of three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when referred to the self but weak or non-exist when referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and the self occurred even when one of them was task-irrelevant. Together, these results not only provide evidence for a robust prioritization effect of good character but also the crucial role of spontaneous self-referential process in the prioritization of good character.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -1380,14 +1380,14 @@ df_exp4a_m1_plot_rt <- exp4a_rt_m1 %>%
                       NM_Self_Bad = Intercept  + ValenceBad,
                       NM_Self_Good = Intercept  + ValenceGood ,
                       NM_Other_Neutral = Intercept  + IdentityOther,               # calculate the differences between conditions
-                      NM_Other_Bad = Intercept  + ValenceBad  + `ValenceBad:IdentityOther`,
-                      NM_Other_Good = Intercept  + ValenceGood + `ValenceGood:IdentityOther`,
+                      NM_Other_Bad = Intercept  + ValenceBad  + `IdentityOther:ValenceBad`,
+                      NM_Other_Good = Intercept  + ValenceGood + `IdentityOther:ValenceGood`,
                       M_Self_Neutral = Intercept  + ismatch,
                       M_Self_Bad = Intercept  + ismatch + `ismatch:ValenceBad`,
                       M_Self_Good = Intercept  + ismatch + `ismatch:ValenceGood`,
                       M_Other_Neutral = Intercept  + ismatch + `ismatch:IdentityOther`,
-                      M_Other_Bad = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:ValenceBad:IdentityOther`,
-                      M_Other_Good = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:ValenceGood:IdentityOther`) %>%
+                      M_Other_Bad = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:IdentityOther:ValenceBad`,
+                      M_Other_Good = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:IdentityOther:ValenceGood`) %>%
         dplyr::select(`.chain`, `.iteration`, `.draw`, contains('M_')) %>%
         tidyr::pivot_longer(cols = NM_Self_Neutral:M_Other_Good, names_to = "term", values_to =  "value") %>%  # wide to long
   dplyr::mutate(term = factor(term, levels = c('NM_Self_Neutral', 'NM_Self_Bad', 'NM_Self_Good',
